jsdialog: fix scrollbars inside dialogs
This fixes side effect from commit a1b2091ae622437f531f1126a8de9c143b06be68
JSDialog: Dialogs shouldn't be taller than viewport

As mentioned in the above commit, we seemed to have children that are
always bigger than the parent even if there is no elements to be
displayed and to fix that we enforce in multiple places the overflow
hidden: afbf052bb5d1f9b74389c068552c40878301aa43
	- Ideally we wouldn't do this and just let the web browser
	figure out if a scroll bar is needed or not. However this
	would be a quite risky thing to do without enough testing...so

Best to ensure that other dialogs that have hidden items in the
DOM don't get scrollbars. Examples:
	- Writer -> Format -> Character
	- Calc -> Data -> Validity

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -80,6 +80,10 @@
 	line-height: 1.5;
 }
 
+.jsdialog-container .ui-dialog-content > div:not(.ui-scrollwindow) {
+	overflow: hidden; /* don't inherit scrollbar from parent */
+}
+
 .jsdialog-container .lokdialog.ui-dialog-content.ui-widget-content {
 	overflow: hidden;
 }
